feat: change move type to enum